correct layout and some punctuation

--- a/Focus.tex
+++ b/Focus.tex
@@ -23,7 +23,7 @@
 
 \smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time}{Billy Joel}{}
 
-\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{Marcus Aurelius}{}
+\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
 
 
 \clearpage
@@ -33,11 +33,11 @@ Most things make no difference. Being busy is a form of laziness. Lazy thinking 
 See: efficacy hacks\llink{http://bit.ly/1EDPjUQ} and a not to do list\llink{http://bit.ly/1EDPu2H}.
 }
 
-\hugeQuote{MA_DL}{If you seek tranquillity, do less}{
-\newline
-or (more accurately) do what's essential because most of what we say and do is not essential\newline
+\HugeQuote{MA_DL}{If you seek tranquillity, do less}{ or (more accurately) do what's essential because most of what we say and do is not essential.\newline
 Ask yourself at every moment "is this necessary?"}
 {Marcus Aurelius}{}{}
+
+\HugeQuote{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}{} 
 
 \hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
 
@@ -59,11 +59,10 @@ A task will swell in (perceived) importance and complexity in relation to the ti
 \HugeQuote{MA_CUCUMBER}{The cucumber is bitter?}{\newline
 The throw it out.\newline
 There are brambles in the path?\newline
-Then go around them}{Marcus Aurelius}{PL_DST}{}
+Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 %TODO: unsure on origin here but likely MA
-\HugeQuote{SP_HABIT}{Four habits to watch for.}{\newline
-Ask yourself:
+\HugeQuote{SP_HABIT}{Ask yourself}{:
 \begin{itemize}
 \item is this thought necessary?
 \item is it destructive to those around me?
@@ -73,11 +72,7 @@ Ask yourself:
 
 \HugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
 
-
-
-
-
-\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things}{Horace}{RH_HMY}{}
+\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{RH_HMY}{}
 
 \hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
 
