--- a/Leadership.tex
+++ b/Leadership.tex
@@ -15,24 +15,21 @@
 
 \hugeQuote{AC_DO}{As I grow older}{ I pay less attention to what people say, I just watch what they do.}{Andrew Carnegie}{}{}
 
-\hugeQuote{AE_DO}{People do not change}{, they are merely revealed}{Anne Enright}{}{}
+\hugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
 
 \hugeQuote{S_DO}{Kindness gives birth to kindness}{}{Seneca}{}{}
 
 \newpage
 
-\hugeQuote{RG_DO}{Pay less attention}{ to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Green}{MA_LISTEN}{}
+\hugeQuote{RG_DO}{Pay less attention}{ to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Greeen}{MA_LISTEN}{}
 
 \hugeQuote{BW_TALK}{There is no use talking about the problem}{ unless you talk about the solution}{Betty Williams}{}{}
 
+\hugeQuote{TP_UNDER}{Under promise;}{ over deliver}{Tom Peters}{}{}
 
+\hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do.}{Henry Ford}{}{}
 
-\hugeQuote{TP_UNDER}{Under promise;}{\newline 
-over deliver}{Tom Peters}{}{}
-
-\hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do}{Henry Ford}{}{}
-
-\hugeQuote{RG_BOAST}{Be careful not to baost}{ of any success}{Robert Greene}{MC_BOAST}{}
+\hugeQuote{RG_BOAST}{Be careful not to baost}{ of any success.}{Robert Greene}{MC_BOAST}{}
 
 \hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
 
@@ -45,25 +42,22 @@ over deliver}{Tom Peters}{}{}
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
 
 
-
-
-
 \hugeQuote{RH_HMY}{Life is defined by how much you do}{, how often you took the difficult path and were rewarded for it}{Ryan Holiday}{}{(not by how much you own)}
 
-\hugeQuote{S_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results}{Shackleton}{}{}
+\hugeQuote{S_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
 \hugeQuote{BAML_RERR}{Recognise effort}{\newline
 Reward results}{BAML}{}{}
 \hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
 \hugeQuote{RL_LISTEN}{Learning to listen}{ is the most valuable thing you can do}{Robert Love}{AC_DO}{}
-\hugeQuote{RG_KNOW}{The ability to measure people}{ abd know who you're dealing with is the most important skill of all}{Robert Greene}{AE_DO}{}
+\hugeQuote{RG_KNOW}{The ability to measure people}{ abd know who you're dealing with is the most important skill of all.}{Robert Greene}{AE_DO}{}
 
 
-\hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire}{Confucious}{}{}
+\hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire.}{Confucious}{}{}
 
 
 
 \HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say.\newline
-Do your best to get inside their minds}{Marcus Aurelius}{RL_LISTEN}{}
+Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
 
 
 \hugeQuote{MA_ASK}{Learn to ask of all actions}{, "why are they doing that?"\newline
@@ -73,10 +67,10 @@ Starting with your own.}{Marcus Aurelius}{H_RAZOR}{}
 
 \hugeQuote{MA_CONTROL1}{If it's in your control why do it?}{ If it's in someone else's then who are you blaming?\newline
 Blame no one\newline
-Set people straight if you can. If not just repair the damage}{Marcus Aurelius}{SL_GIVE}{}
+Set people straight if you can. If not just repair the damage.}{Marcus Aurelius}{SL_GIVE}{}
 
 \hugeQuote{MA_CORRECT}{If they've done something wrong}{, correct them gently and show them how to improve.\newline
-If you can't do that the blame lies with you or no one}{Marcus Aurelius}{HT_CREDIT}{}
+If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CREDIT}{}
 
 
 \hugeQuote{MA_PURPOSE}{To undertake nothing}{:
@@ -89,26 +83,21 @@ If you can't do that the blame lies with you or no one}{Marcus Aurelius}{HT_CRED
 \hugeQuote{RLS_QUIET}{Quiet minds cannot be perplexed}{ or frightened but go on like a clock \ldots in a thunderstorm}{Robert Louis Stephenson}{}{}
 
 
-\smallQuote{RG_TRUSTYOU}{In the end, if people mistrust you and resist your authority you have only yourself to blame}{Robert Greene}{}
+\smallQuote{RG_TRUSTYOU}{In the end, if people mistrust you and resist your authority you have only yourself to blame.}{Robert Greene}{}
 
 
-\hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it}{Confucious}{}{}
+\hugeQuote{C_ABILITY}{Ability will never catch up}{ with the demand for it.}{Confucious}{}{}
 
-\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill}{François de La Rochefoucauld}{M_WORK}{}
+\hugeQuote{LR_WORK}{It takes a great talent and skill}{ to conceal a great talent and skill.}{François de La Rochefoucauld}{M_WORK}{}
 
 \hugeQuote{RG_WORK2}{Everything is judged by its appearance}{; what is unseen counts for nothing. Do not get lost in the crowd or burried in oblivion}{Robert Greene}{}{}
-
-
 
 
 \hugeQuote{CWB_FEEL}{They may foget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
 
 
 
-\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
-
-
-
+\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
 
 \hugeQuote{TF_DISCLOSURE}{Disclosure is disinfectant}{}{Tim Ferriss}{}{}
 
