add draft of patience intro

--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -3,7 +3,9 @@
 
 We know how important action is, but acting rashly, without care and attention can do serious harm to ourselves and can undo the good progress we've made towards our aims.
 
-Patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional reaction (cf. \ref{MA_GRIEF}) 
+Patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (cf. \ref{MA_GRIEF}) and certainly we're only likely to waste time if we act angrily.
+
+As much as we are expected to play the game with limited information we should take time to reflect and consider what we do know before committing to a course if action. We also need to be open to changing our plans as more facts are revealed. 
 
 At all times we need to maintain a level of control so that we can act correctly, we don't fly into a rage, we don't make snap judgements and we don't let ourselves be carried away by the crowd.
 
