re-order quotes for grouping

--- a/Learning.tex
+++ b/Learning.tex
@@ -1,19 +1,17 @@
 \input{LearningIntro.tex}
 
-
-
 \smallQuote{TP_BOOK}{If I read a book and get one good idea from that \$20, then I've gotten one of the greatest deals of all time}{Tom Peters}{}
 
-\hugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience}{Arthur Schopenhaur}{}{}
+\smallQuote{BF_INVEST}{An investment in knowledge always pays the best interest.}{Benjamin Franklin}{}
 
-\hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull}{Robert Greene}{}{}
 
-\hugeQuote{RG_LATE}{You think you are doing fine}{ you are not compelled to adapt until it is too late}{Robert Greene}{}{}
+\HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
+
+\hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
 
 %\hugeQuote{}{}{}{}{}{}
 \hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
-\hugeQuote{M_WORK}{If people knew how hard I worked, it would not seem so masterful}{Michelangelo}{}{}
-
+\hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful}{Michelangelo}{}{}
 \hugeQuote{RG_WORK}{never expose the sweat}{ and labor behind your poise}{Robert Greene}{}{}
 
 
@@ -28,7 +26,7 @@
 \smallQuote{BR_CHANGE}{I would never die for my beliefs because I might be wrong}{Bertand Russell}{}
 
 
-\hugeQuote{BF_INVEST}{An investment in knowledge}{ always pays the best interest.}{Benjamin Franklin}{}{}
+
 %todo possibly humility 
 %cf bertrand russell learning/flowers
 \hugeQuote{MDM_BOAST}{Does learning mean nothing to you}{ unless you know that someone else knows that you know it?}{Michel de Montaigne}{MC_BOAST}{}
