--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -10,7 +10,7 @@
 
 \hugeQuote{S_CUCUMBER}{Get used to your circumstances}{, complain about them as little as possible. Grasp whatever advantages they have to offer}{Seneca}{MA_CUCUMBER}{}
 
-\hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{and she may be gone tomorrow.}
+\hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{\ldots and she may be gone tomorrow.}
 
 \hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
 
