add leadership notes and re position chapter

--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -1,7 +1,7 @@
 \cleardoublepage
 \begin{multicols}{2}
 
-As hard as it can be to take action, it's even harder to maintain the level of focus we need to on the right things. To help us find the right things we should think about what impact our efforts can produce (cf. \ref{ST_UTU}). The sun will still hide behind the clouds on our day at the beach, the white van will still drive too close no matter how much we hope otherwise. Better to work on things we can control.  %effort vs impact
+As hard as it can be to take action, it's even harder to maintain the level of focus we need to on the right things. To help us find the right things we should think about what impact our efforts can produce (cf. \ref{ST_UTU}) and what price we'll have to pay. The sun will still hide behind the clouds on our day at the beach, the white van will still drive too close no matter how much we hope otherwise. Better to work on things we can control.  %effort vs impact
 
 When we do identify the right things, we still squander our time and energy. We're too polite, putting ourselves and our priorities to one side to avoid offending people (cf. \ref{PL_DST} and \ref{GVG_ALONE}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (cf. \ref{MA_SMALL}), we spend hours mindlessly scrolling around crappy sensationalist journalism when we could be reading an immersive novel (cf. \ref{TP_BOOK}) or working on our beloved hobby (cf. \ref{BB_PRACTICE}). 
 
