--- a/LeadershipIntro.tex
+++ b/LeadershipIntro.tex
@@ -1,5 +1,15 @@
 \cleardoublepage
 \begin{multicols}{2}
 
+It doesn't matter whether we think we're leading a team, a household or just ourselves. Our behaviour is always influencing others and our actions speak volumes about the sort of people we are. 
+
+We need to recognise the efforts of others and be generous in our interpretation of their actions (cf. \ref{SL_GIVE}), we need to show gratitude and a thirst for knowledge and be open to correction, show others they're important to us by putting everything else to one side and focussing entirely on them when they need us (and making sure we're available when they do). 
+
+Acting with a level of determination and confidence will demonstrate that we have thought about our options and made a conscious choice about the next steps
+
+Acting as though we have already achieved the qualities we aspire to, acting as though we are already the better versions of ourselves that we imagined at the start of the journey means we will have a positive impact on those around us.
+
+Of course, it doesn't matter whether anyone follows. Only that we try to lead.
+
 \end{multicols}
 \clearpage
