--- a/Learning.tex
+++ b/Learning.tex
@@ -7,8 +7,6 @@
 
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
 
-\hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
-
 %\hugeQuote{}{}{}{}{}{}
 \hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
 \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful}{Michelangelo}{}{}
@@ -19,11 +17,14 @@
 
 \hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery}{ as something necessary and positive}{Robert Greene}{}{}
 
+
+\hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
+
 \HugeQuote{RH_ML}{More listening, more learning}{\newline
 	Fewer interruptions, fewer conclusions.
 }{Ryan Holiday}{MA_CHANGE}{}
 
-\smallQuote{BR_CHANGE}{I would never die for my beliefs because I might be wrong}{Bertand Russell}{}
+\hugeQuote{BR_CHANGE}{I would never die for my beliefs}{ because I might be wrong}{Bertand Russell}{}{}
 
 
 
