--- a/Patience.tex
+++ b/Patience.tex
@@ -18,7 +18,8 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly}{}{Isocrates}{MA_GOAL}{}
 
-\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+
+\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
 
 \smallQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it. Your doubts and hestitation will infect your execution.}{Robert Greene}{ST_WAIT}{}
 
