--- a/definitions.tex
+++ b/definitions.tex
@@ -35,7 +35,8 @@
 
 \newcommand{\llink}[1] {\footnote{\href{#1}{#1}}}
 
-\newcommand*\cleartoleftpage{%
+\newcommand*\cleartoleftpage{
   \clearpage
   \ifodd\value{page}\hbox{}\newpage\fi
 }
+\newcommand*\cleartorightpage{\cleardoublepage }
