--- a/Leadership.tex
+++ b/Leadership.tex
@@ -6,22 +6,29 @@
 
 \smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest}{Ryan Holiday}{}
 
+\cleartorightpage
+
 \hugeQuote{FB_WISE}{Wise men make more opportunites than they find}{}{Francis Bacon}{}{}
 
 
 \hugeQuote{RLS_SEED}{Don't judge each day by the harvest you reep}{ but by the seeds you sow.}{Robert Louis Stephenson}{}{}
 
-\newpage
+\cleartoleftpage
 
-\hugeQuote{AC_DO}{As I grow older}{ I pay less attention to what people say, I just watch what they do.}{Andrew Carnegie}{}{}
+\smallQuote{AC_DO}{As I grow older I pay less attention to what people say, I just watch what they do.}{Andrew Carnegie}{}
+
+\smallQuote{RG_DO}{Pay less attention to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Greeen}{MA_LISTEN}
+
+\smallQuote{RL_LISTEN}{Learning to listen is the most valuable thing you can do}{Robert Love}{AC_DO}{}
+
+\HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say.\newline
+Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
+
 
 \hugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
 
-\hugeQuote{S_DO}{Kindness gives birth to kindness}{}{Seneca}{}{}
 
-\newpage
-
-\hugeQuote{RG_DO}{Pay less attention}{ to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Greeen}{MA_LISTEN}{}
+\HugeQuote{S_DO}{Kindness gives birth to kindness}{}{Seneca}{}{}
 
 \hugeQuote{BW_TALK}{There is no use talking about the problem}{ unless you talk about the solution}{Betty Williams}{}{}
 
@@ -29,11 +36,10 @@
 
 \hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do.}{Henry Ford}{}{}
 
-\hugeQuote{RG_BOAST}{Be careful not to baost}{ of any success.}{Robert Greene}{MC_BOAST}{}
+\hugeQuote{RG_BOAST}{Be careful not to boast}{ of any success.}{Robert Greene}{MC_BOAST}{}
 
 \hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
 
-\cleardoublepage
 
 \hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, \newline bad master.}{Simon Cozens}{}{}
 
@@ -48,16 +54,13 @@
 \hugeQuote{BAML_RERR}{Recognise effort}{\newline
 Reward results}{BAML}{}{}
 \hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
-\hugeQuote{RL_LISTEN}{Learning to listen}{ is the most valuable thing you can do}{Robert Love}{AC_DO}{}
+
 \hugeQuote{RG_KNOW}{The ability to measure people}{ abd know who you're dealing with is the most important skill of all.}{Robert Greene}{AE_DO}{}
 
 
 \hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire.}{Confucious}{}{}
 
 
-
-\HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say.\newline
-Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
 
 
 \hugeQuote{MA_ASK}{Learn to ask of all actions}{, "why are they doing that?"\newline
@@ -93,13 +96,10 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 \hugeQuote{RG_WORK2}{Everything is judged by its appearance}{; what is unseen counts for nothing. Do not get lost in the crowd or burried in oblivion}{Robert Greene}{}{}
 
 
-\hugeQuote{CWB_FEEL}{They may foget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
-
-
-
-\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
+\hugeQuote{CWB_FEEL}{They may forget what you said}{ but they will never forget how you made them feel.}{Carl W. Buechner}{}{}
 
 \hugeQuote{TF_DISCLOSURE}{Disclosure is disinfectant}{}{Tim Ferriss}{}{}
 
 \hugeQuote{S_DISCLOSURE}{All defects are lighter in the open}{. They are most pernicious when concealed beneath a pretense of soundness}{Seneca}{}{We don't need to post our defects on Facebook, but we can spend some time thinking about them\llink{http://thephilosophersmail.com/PhilosophicalMeditation.pdf}}
 
+\smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
