add confidence intro draft

--- a/Humility.tex
+++ b/Humility.tex
@@ -9,7 +9,7 @@
 \hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground}{}{Sun Tzu}{}{}
 \hugeQuote{DLP_HELP}{Take the help}{}{Danielle La Porte}{}{}
 
-\hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{via Ryan Holiday}{}{}
+\hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{Ryan Holiday}{}{} %TODO: check source
 \hugeQuote{IP_GAME}{After the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
 \hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
 
