--- a/Leadership.tex
+++ b/Leadership.tex
@@ -21,9 +21,7 @@
 
 \smallQuote{RL_LISTEN}{Learning to listen is the most valuable thing you can do}{Robert Love}{AC_DO}{}
 
-\HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say.\newline
-Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
-
+\HugeQuote{MA_LISTEN}{Practice really hearing}{ what people say. Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
 
 \hugeQuote{AE_DO}{People do not change}{, they are merely revealed.}{Anne Enright}{}{}
 
@@ -41,7 +39,7 @@ Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
 \hugeQuote{SP_QUIET}{Be quiet}{, work hard, stay healthy}{}{}{}
 
 
-\hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, \newline bad master.}{Simon Cozens}{}{}
+\hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
 
 
 \hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
@@ -55,7 +53,7 @@ Do your best to get inside their minds.}{Marcus Aurelius}{RL_LISTEN}{}
 Reward results}{BAML}{}{}
 \hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
 
-\hugeQuote{RG_KNOW}{The ability to measure people}{ abd know who you're dealing with is the most important skill of all.}{Robert Greene}{AE_DO}{}
+\hugeQuote{RG_KNOW}{The ability to measure people}{ and know who you're dealing with is the most important skill of all.}{Robert Greene}{AE_DO}{}
 
 
 \hugeQuote{CF_DNI}{Do not impose on others}{ what you yourself do not desire.}{Confucious}{}{}
