--- a/Confidence.tex
+++ b/Confidence.tex
@@ -7,7 +7,7 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 \hugeQuote{AN_COURAGE}{Life shrinks or expands}{ in proportion to one's courage.}{Anais Nin}{JKZ_ENDURE}{}
 
 \hugeQuote{SL_SC}{So often self confidence is dependent on the basic but elusive premise}{\newline
-"I'm fine as I am"}{via the School of Life}{}
+"I'm fine as I am"}{School of Life}{}
 {On confidence\llink{http://www.thebookoflife.org/on-confidence/}} %also include the more confident notes maybe 
 
 \hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
@@ -15,17 +15,17 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 \smallQuote{RG_FAIL}{Any knid of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work}{Robert Green}{}
 
 \hugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action}{Catherine Pulsifer}{S_CUCUMBER}{}
-\smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step}{Ryan Holiday}{} %fall seven stand eight
+\smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step}{Ryan Holiday}{JP_STAND}
 \smallQuote{MA_FAIL}{But to get back up when you fail, to celebrate behaving like a human (however imperfectly) and fully embrace the pursuit you've embarked on.}{Marcus Aurelius}{}
 
 \hugeQuote{DLP_FAIL}{You will fail eventually.}{\newline
-Whatever.}{Danielle La Parte}{MA_DWH}{}
+Whatever.}{Danielle La Porte}{MA_DWH}{}
 \hugeQuote{NT_FAIL}{A mistake is not something to be determined after the fact}{ but in the light of information up to that point}{Nassim Taleb}{}{}
 
 \smallQuote{SP_FAIL}{A failed attempt is just that and nothing more, it’s not the end and it’s not fatal. Keep at it.}{}{}
 
 \hugeQuote{NH_FAIL}{Failure connot cope with persistence.}{}{Napoleon Hill}{MAR_PERSIST}{}
-\hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespear}{}{}
+\hugeQuote{WS_FEAR}{Our doubts are traitors}{, and make us lose the good we might oft win be fearing to attempt.}{William Shakespeare}{}{}
 
 \hugeQuote{RH_DESTROY}{You don't have to be the best}{ you just have to be harder to destroy. You have to be relentless}{Ryan Holiday}{NH_FAIL}{}
 
