--- a/Focus.tex
+++ b/Focus.tex
@@ -37,7 +37,7 @@ See: efficacy hacks\llink{http://bit.ly/1EDPjUQ} and a not to do list\llink{http
 Ask yourself at every moment "is this necessary?"}
 {Marcus Aurelius}{}{}
 
-\HugeQuote{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}{} 
+\HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
 
 \hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
 
@@ -57,14 +57,14 @@ A task will swell in (perceived) importance and complexity in relation to the ti
 
 
 \HugeQuote{MA_CUCUMBER}{The cucumber is bitter?}{\newline
-The throw it out.\newline
+Then throw it out.\newline
 There are brambles in the path?\newline
 Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 %TODO: unsure on origin here but likely MA
-\HugeQuote{SP_HABIT}{Ask yourself}{:
+\HugeQuote{SP_HABIT}{Of each thought ask yourself}{:
 \begin{itemize}
-\item is this thought necessary?
+\item is it necessary?
 \item is it destructive to those around me?
 \item is it really what you think?
 \item is it just self indulgent?
@@ -79,12 +79,12 @@ Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 \hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
-\smallQuote{FP_BACK}{It's a long road there's no turning back}{Funki Porcini}{}
+\hugeQuote{FP_BACK}{It's a long road there's no turning back}{Funki Porcini}{}
 
 
 \hugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
 
-\HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place}{Tim Ferriss}{}{}
+\HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place}{}{Tim Ferriss}{}{}
 
 \hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
 
