--- a/GenerosityIntro.tex
+++ b/GenerosityIntro.tex
@@ -1,5 +1,11 @@
 \cleardoublepage
 \begin{multicols}{2}
 
+We know other people can upset and unravel our plans but it doesn't mean they're out to get us (\S \ref{H_RAZOR}) even though it may feel like that from time to time.
+
+As hard as it is, if we want to make progress towards our aims, we need to give these people a break. It's part of our duty to lead by example. We know that focussing on things that happened in the past is fruitless, it won't change the situation and only adds to our own stresses. There are few things more pointless than this. We don't have to forget the events, that might mean we'd be surprised next time around but turning them over and over?
+
+There's no need to harbour grudges, we don't have that time to waste, but we do need to remember the times we've spoken sharply or hurtfully and we've been forgiven and pass that favour on (\S \ref{SL_GIVE} and \S \ref{S_DO}). 
+
 \end{multicols}
 \clearpage
