--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -22,4 +22,4 @@
 
 \HugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare a dying talent but one that is still greatly valued.}{Robert Greene}{RWE_STARS}{}
 
-\HugeQuote{CP_SCAR}{It is so hard to foget pain}{ but it is harder to remember sweetness. There is no scar for happiness}{Chuck Palaniuk}{}{}
+\HugeQuote{CP_SCAR}{It is so hard to forget pain}{ but it is harder to remember sweetness. There is no scar for happiness}{Chuck Palaniuk}{}{}
