--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,13 +4,13 @@
 \begin{multicols}{2}
 
 We all want to be better people, shout at the kids less often, get some perspective at work and call our friends and family more. We have a picture of a better version of ourselves but we're still fallible, lazy, tired and busy. Best intentions fall away and we forget our better selves. 
-To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (cf. \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
+To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (\S \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
 
 Even with our goal, we'll still fail. Badly. But to get us through the tough spots We're going to get help from philosophers, deities, sportsmen, fictional characters, artists and other people far smarter than us. 
 
 The hope here is that we can turn to this "manual" for help at times when we're losing our way, forgetting what's important to us and the promises we've made about the sort of person we want to become.
 
-The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life\llink{http://bit.ly/1XoP0tE}, the majority of content is helpful quotes and aphorisms picked up from books and the internet. If you find one good idea in these pages it will be directly attributable to them (cf. \ref{TP_BOOK}). 
+The set of qualities we're looking to develop here are inspired in part by the Modern Virtues page from the School of Life\llink{http://bit.ly/1XoP0tE}, the majority of content is helpful quotes and aphorisms picked up from books and the internet. If you find one good idea in these pages it will be directly attributable to them (\S \ref{TP_BOOK}). 
 %http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
 
 Good luck, and, as our trusted advisor Seneca would say, live well.
