--- a/Leadership.tex
+++ b/Leadership.tex
@@ -45,10 +45,10 @@
 \hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
 
-
 \hugeQuote{RH_HMY}{Life is defined by how much you do}{, how often you took the difficult path and were rewarded for it}{Ryan Holiday}{}{(not by how much you own)}
 
-\hugeQuote{S_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
+\hugeQuote{ES_EFFORT}{Super-human effort}{ is not worth a damn unless it produces results.}{Shackleton}{}{}
+
 \hugeQuote{BAML_RERR}{Recognise effort}{\newline
 Reward results}{BAML}{}{}
 \hugeQuote{RH_CCNC}{Close captures no crowns}{}{Ryan Holiday}{}{}
