--- a/Learning.tex
+++ b/Learning.tex
@@ -7,7 +7,6 @@
 
 \HugeQuote{AS_FORGET}{To forgive and forget}{ means to have thrown away a dearly bought experience.}{Arthur Schopenhaur}{}{}
 
-%\hugeQuote{}{}{}{}{}{}
 \hugeQuote{H_ART}{The art lies in concealing the art}{}{Horace}{}{} 
 \hugeQuote{M_WORK}{If people knew how hard I worked}{, it would not seem so masterful}{Michelangelo}{}{}
 \hugeQuote{RG_WORK}{never expose the sweat}{ and labor behind your poise}{Robert Greene}{}{}
@@ -16,7 +15,6 @@
 \hugeQuote{NT_NNP}{Never nitpick a heuristic}{}{Nassim Taleb}{}{}
 
 \hugeQuote{RG_MASTERY}{You must see your attempt at attaining mastery}{ as something necessary and positive}{Robert Greene}{}{}
-
 
 \hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
 
@@ -34,5 +32,5 @@
 
 \hugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
 
-\hugeQuote{S_FOLLY}{It's it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
+\hugeQuote{S_FOLLY}{It's it the height of folly to learn inessential things}{ when time is so desperately short}{Seneca}{MA_DL}{}
 
