--- a/LearningIntro.tex
+++ b/LearningIntro.tex
@@ -1,5 +1,14 @@
 \cleardoublepage
 \begin{multicols}{2}
 
+We don't know enough. We'll likely never master our respective professions, hobbies and past-times, we'll never understand how others behave and what motivates them to any meaningful level but that shouldn't stop us from trying. Quite the opposite in fact. Maintaining an open mind\llink{http://mindsetonline.com/whatisit/themindsets/index.html} is a key trait for us to make sure we're in a position where we can grow and make progress towards our aims. Getting stuck into patterns of behaviour and allowing our comfort zones to shrink is a sure way to stop progress dead in its tracks.
+
+There's an endless amount of knowledge our open minds can consume but learning in an undirected manner won't help us (\S \ref{S_FOLLY} and \ref{TF_SLO}). 
+Deciding which topics (and even which authors) to consume is important enough to be given some serious thought. We can't just let anyone in so following recommendations from those we trust becomes a key strategy for learning.
+
+Spending some time reviewing what we would like to learn should involve not just a look at our careers and the skills needed for the Next Big Project but a broader look at things we've enjoyed in the past and what topics we can look at in that area. If it happens that the topics you've enjoyed are the ones you use every day in your career then you're very lucky and if not? In that case we need to have a more detailed look (\S \ref{BD_LIFE}).
+
+No matter what we choose, one way we can certainly learn more is to simply read more\llink{http://ryanholiday.net/how-to-read-more-a-lot-more/} so that we make use of otherwise wasted time. 
+
 \end{multicols}
 \clearpage
