--- a/FocusIntro.tex
+++ b/FocusIntro.tex
@@ -1,11 +1,11 @@
 \cleardoublepage
 \begin{multicols}{2}
 
-As hard as it can be to take action, it's even harder to maintain the level of focus we need to on the right things. To help us find the right things we should think about what impact our efforts can produce (cf. \ref{ST_UTU}) and what price we'll have to pay. The sun will still hide behind the clouds on our day at the beach, the white van will still drive too close no matter how much we hope otherwise. Better to work on things we can control.  %effort vs impact
+As hard as it can be to take action, it's even harder to maintain the level of focus we need to on the right things. To help us find the right things we should think about what impact our efforts can produce (\S \ref{ST_UTU}) and what price we'll have to pay. The sun will still hide behind the clouds on our day at the beach, the white van will still drive too close no matter how much we hope otherwise. Better to work on things we can control.  %effort vs impact
 
-When we do identify the right things, we still squander our time and energy. We're too polite, putting ourselves and our priorities to one side to avoid offending people (cf. \ref{PL_DST} and \ref{GVG_ALONE}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (cf. \ref{MA_SMALL}), we spend hours mindlessly scrolling around crappy sensationalist journalism when we could be reading an immersive novel (cf. \ref{TP_BOOK}) or working on our beloved hobby (cf. \ref{BB_PRACTICE}). 
+When we do identify the right things, we still squander our time and energy. We're too polite, putting ourselves and our priorities to one side to avoid offending people (\S \ref{PL_DST} and \ref{GVG_ALONE}), we make great gains on Twitter and Facebook while we let our Amazing Book Idea gather dust (\S \ref{MA_SMALL}), we spend hours mindlessly scrolling around crappy sensationalist journalism when we could be reading an immersive novel (\S \ref{TP_BOOK}) or working on our beloved hobby (\S \ref{BB_PRACTICE}). 
 
-Epictetus reminds us that we need to gut things from our lives which take us away from the tricky but important business of improvement. We can be sure that nothing truly terrible will happen if we stop using social media. We can be confident that life will carry on if we leave the "mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}" to someone else. There are so many ways to spend our time, we need to be careful not to waste it and that can require significant effort. Asking ourselves whether what we're doing right now is truly important to us (cf. \ref{MA_DL}) is an incredibly useful habit to develop.
+Epictetus reminds us that we need to gut things from our lives which take us away from the tricky but important business of improvement. We can be sure that nothing truly terrible will happen if we stop using social media. We can be confident that life will carry on if we leave the "mind numbing spirit crushing game shows\footnote{Renton, Trainspotting}" to someone else. There are so many ways to spend our time, we need to be careful not to waste it and that can require significant effort. Asking ourselves whether what we're doing right now is truly important to us (\S \ref{MA_DL}) is an incredibly useful habit to develop.
 
 Maybe we should call someone who's important to us and focus soley on that for starters. 
 
