--- a/Generosity.tex
+++ b/Generosity.tex
@@ -1,26 +1,31 @@
 \input{GenerosityIntro.tex}
 
+\cleartoleftpage
 
-
-\hugeQuote{MA_TRUST}{Tell yourself this}{ the people I deal with today will be:
-\begin{itemize}
-\item meddling
-\item ungrateful
-\item arrogant
-\item dishonest
-\item jealous
-\item surly
-\end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
-
+\smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
 
 \smallQuote{MM_HATE}{Resentment is like taking poison and waiting for the other person to die}{Malachi McCourt}{TS_HHH}
+
+\cleartorightpage
+
+\HugeQuote{MA_TRUST}{Tell yourself this}{ the people I deal with today will be:
+\begin{itemize}
+	\item meddling
+	\item ungrateful
+	\item arrogant
+	\item dishonest
+	\item jealous
+	\item surly
+\end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
+
+\HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
+Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
 \hugeQuote{MA_HATE}{Someone hates me?}{ Their problem.\newline
 Mine: to be patient and cheeerful with everyone (including them)}{Marcus Aurelius}{}{}
 
 \hugeQuote{RH_HATE}{Because\ldots hate will get you every time}{\newline
 Every time.}{Ryan Holiday}{}{}
-
 
 \hugeQuote{MDM_SELF}{If talking to oneself did not look so mad}{ no day would go by without my growling to myself "you silly shit!"\newline
 Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DWW}{}
@@ -29,10 +34,8 @@ Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DW
 \hugeQuote{BT_GIVE}{Always give with remembering}{ and receive without forgetting}{Brian Tracy}{S_DO}{}
 
 
-\hugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
+\HugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
 %http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
-
-\smallQuote{MA_GIVE}{You've given and they've received it. And yet, like an idiot, you keep holding out for more. To be credited with a good deed? To be repaid in kind? why?}{Marcus Aurelius}{HT_CREDIT}
 
 %Unsure on which chapter
 \hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
