--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -5,11 +5,11 @@ We know how important action is, but acting rashly, without care and attention c
 
 In many ways for our "handbook" knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the manner in which we undertake the journey is at least as important as the desination.
 
-To some patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (cf. \ref{MA_GRIEF}) and certainly we're only likely to waste time and do everything badly if we act or speak angrily (cf. \ref{BG_ANGER}).
+To some patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (\S \ref{MA_GRIEF}) and certainly we're only likely to waste time and do everything badly if we act or speak angrily (\S \ref{BG_ANGER}).
 
-We know that we are expected to play the game with limited (or even inaccurate) information but we should take time to reflect and consider what we do know before committing to a course of action. We also need to be open to changing our plans as more facts are revealed (cf. \ref{MA_CHANGE}).  
+We know that we are expected to play the game with limited (or even inaccurate) information but we should take time to reflect and consider what we do know before committing to a course of action. We also need to be open to changing our plans as more facts are revealed (\S \ref{MA_CHANGE}).  
 
-Acting in good faith after a consideration of the facts and taking counsel where we can will mean that even when the landscape changes and the actions we took weren't right in retrospect we can still stand by them in the light of what we knew at the time(cf. \ref{NT_FAIL}). Dive in, on the other hand, and we can blunder from one poorly understood situation to the next and end up in an even weaker position than if we'd have spent some time before rushing off. 
+Acting in good faith after a consideration of the facts and taking counsel where we can will mean that even when the landscape changes and the actions we took weren't right in retrospect we can still stand by them in the light of what we knew at the time(\S \ref{NT_FAIL}). Dive in, on the other hand, and we can blunder from one poorly understood situation to the next and end up in an even weaker position than if we'd have spent some time before rushing off. 
 
 It's a lot of effort to be patient enough to maintain a level of control so that we can act correctly, we don't fly into a rage, we don't make snap judgements and we don't let ourselves be carried away by the crowd.
 
