add quote form 'let them eat chaos

--- a/Leadership.tex
+++ b/Leadership.tex
@@ -101,3 +101,7 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 \hugeQuote{S_DISCLOSURE}{All defects are lighter in the open}{. They are most pernicious when concealed beneath a pretense of soundness}{Seneca}{}{We don't need to post our defects on Facebook, but we can spend some time thinking about them\llink{http://thephilosophersmail.com/PhilosophicalMeditation.pdf}}
 
 \smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+
+\HugeQuote{KT_NUP}{It's not up to us to make this a better place}{}{Kate Tempest}{}{It is. We can do it one person at a time.} 
+
+
