add Musonius quote

--- a/Action.tex
+++ b/Action.tex
@@ -40,3 +40,6 @@ But the hardest thing of all is to act in accordance with your thinking}{John Vo
 
 \hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it}{Rudy Guilliani}{BW_TALK}{}
 
+
+\hugeQuote{MR_ACT}{Although understanding the theory behind the action enables one to speak}{, it is the practice which enables one to act}{Musonius}{}{}
+
