--- a/Books.tex
+++ b/Books.tex
@@ -3,5 +3,6 @@
   \bibitem{AMNT} Meditations: A new translation (Gregory Hayes) - Marcus Aurelius - Modern Library
   \bibitem{STC} Twelve Caesars -  Suetonius - Penguin Classics
   \bibitem{TW} Walden - Henry David Thoreau - Penguin Classics
+  \bibitem Lectures and Sayings (Cynthia King) - Musonius Rufus - William B. Irvine
 
 \end{thebibliography}
