add quotes from Musonius etc

--- a/Focus.tex
+++ b/Focus.tex
@@ -10,6 +10,8 @@
 
 \hugeQuote{C_HONOR}{Let your mind dwell}{ on examples of honor}{Cicero}{}{} % cf machiavelli ?
 
+\hugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
+
 \clearpage
 
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know}{Ryan Holiday}{}
