--- a/Leadership.tex
+++ b/Leadership.tex
@@ -6,6 +6,10 @@
 
 \smallQuote{RH_RAW}{Races are won here not there. Where it is hardest to speed up not easiest}{Ryan Holiday}{}
 
+\cleartoleftpage
+
+\smallQuote{MR_NL}{A physician who heals a few is no less a doctor than one who heals many}{Musonius Rufus}{} 
+
 \cleartorightpage
 
 \hugeQuote{FB_WISE}{Wise men make more opportunites than they find}{}{Francis Bacon}{}{}
@@ -41,6 +45,7 @@
 
 \hugeQuote{SC_BAD}{\texttt{use strict;}}{\newline good servant, bad master.}{Simon Cozens}{}{}
 
+\smallQuote{MR_CHIEF}{Kings soon perish who make a habit if justifying their actions to their subjects by saying "I have the power" rather than "it is my duty"}{Musonius Rufus}{} 
 
 \hugeQuote{LT_CHIEF}{Be the chief}{ but never the lord}{Lao Tzu}{}{}
 \hugeQuote{KR_SPORT}{One man practicing sportsmanship}{ is better than 100 teaching it}{Knute Roche}{HF_REP}{}
@@ -101,6 +106,9 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 \hugeQuote{S_DISCLOSURE}{All defects are lighter in the open}{. They are most pernicious when concealed beneath a pretense of soundness}{Seneca}{}{We don't need to post our defects on Facebook, but we can spend some time thinking about them\llink{http://thephilosophersmail.com/PhilosophicalMeditation.pdf}}
 
 \smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
+
+
+\hugeQuote{FR_DTR}{When youbdo things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe which collided with God, Futurama}{}{Probably} 
 
 \HugeQuote{KT_NUP}{It's not up to us to make this a better place}{}{Kate Tempest}{}{It is. We can do it one person at a time.} 
 
