--- a/Learning.tex
+++ b/Learning.tex
@@ -18,6 +18,9 @@
 
 \hugeQuote{RG_SOFT}{The greatest danger you face}{ is your mind growing soft and your eyes growing dull.}{Robert Greene}{}{}
 
+
+\smallQuote{MR_SOFT}{to let one's mind go lax is, in effect, to lose it}{Musonius Rufus}{} 
+
 \HugeQuote{RH_ML}{More listening, more learning}{\newline
 	Fewer interruptions, fewer conclusions.
 }{Ryan Holiday}{MA_CHANGE}{}
