--- a/Resilience.tex
+++ b/Resilience.tex
@@ -47,7 +47,9 @@ If we act wrongly we have done serious harm to ourselves}{Marcus Aurelius}{}{}
 \hugeQuote{MA_TC}{Tranquility comes when you stop caring what they say}{}{Marcus Aurelius}{}{}
 
 
-\cleardoublepage
+\cleartoleftpage
+
+\smallQuote{MR_UTU}{If you work hard to do what is right, do not be upset by roadblocks; think about how many of the things in your life haven't turned out as you wanted them to but advthey should have done.}{Musonius Rufus}{} 
 
 \HugeQuote{ST_UTU}{Ta eph'hemin}{\newline
 Ta ouk eph'hemin}{Stoic phrase}{}{what is up to us, what is not up to us.}
